# gha-tool

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/custom/cjson/: CMakeLists.txt
src/gha-tool/: gha-tool.c
